# scws

./: .gitignore  Makefile.am  Makefile.mingw  README.md  build.ps1  package.ps1
.github/workflows/: build-windows.yml
cli/: gen_dict.c  scws_cmd.c
etc/: Makefile.am
libscws/: config_win32.h  lock.h  xdb.c  xtree.c
